I figured out how to space the sides while maintaing the same colour for different sections, although this probably isn't the best practice. I also adjusted the margines for elements and spaced them out.

--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,52 @@ div {
     font-family: "Roboto";
     font-weight: normal;
 }
-.flex-container {
+.headernav {
     display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+.item {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+#header_logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+.secondary_text {
+    font-size: 18px;
+    color: #E5E7EB
 }
 
 .dark {
     background-color: #1F2937;
+    display: flex;
+    
+    border: 20px;
+    
 }
 .white {
     background-color:white;
 }
 .grey {
     background-color: #E5E7Eb;
+}
+
+.side {
+    flex: 1 1 0%;
+    height: 50x;
+}
+
+.body {
+    flex: 10 0 0%;
+}
+#hero_text {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+body {
+    margin: 0%;
 }
