--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ div {
 }
 .white {
     background-color:white;
+    display: flex;
 }
 .grey {
     background-color: #E5E7Eb;
@@ -55,7 +56,6 @@ body {
 #main_img {
     flex: 1 1 auto;
     width: 360px;
-
 }
 #main_text {
     flex: 1 1 0%;
@@ -66,4 +66,31 @@ body {
     border: #3882F6;
     width: 100px;
     text-align: center;
+}
+#infotext {
+    flex: 8 0 0%;
+    text-align: center;
+}
+
+#randomtext {
+    font-weight: 900;
+    color: #1F2937;
+    font-size: 36px;
+}
+#imagerow {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+}
+.img_border {
+    border: 5px solid #3882F6;
+    border-radius: 10px;
+    width: 140px;
+    height: 100px;
+}
+.text_border {
+    width: 140px;
+    height: 50px;
+    resize: none;
 }
